--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 			<div class="right-side-bar nav-links">
 
 				<div class="dropdown">
-					<button id="dropdownButton" class="dropbtn navigation-text-style "
-						data-target="best-suited">
+					<button id="dropdownButton" class="dropbtn navigation-text-style " data-target="best-suited">
 						Best Suited For
 						<span class="arrow"><i class="ri-arrow-down-s-line"></i></span>
 					</button>
@@ -326,7 +325,11 @@
 
 								<div class="bottom-data-benifit">
 
-									<p class="bottom-data-benifit-description">RealLives helps you go beyond achievements and test scores by making social, emotional, and ethical growth visible and measurable. Through immersive life simulations, you experience real-world situations that build empathy, resilience, and responsible decision-making, all key to thriving in life and work.</p>
+									<p class="bottom-data-benifit-description">RealLives helps you go beyond
+										achievements and test scores by making social, emotional, and ethical growth
+										visible and measurable. Through immersive life simulations, you experience
+										real-world situations that build empathy, resilience, and responsible
+										decision-making, all key to thriving in life and work.</p>
 
 								</div>
 
@@ -349,7 +352,10 @@
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										The ChangeMaker Index transforms every in-game choice into meaningful insights on your mindset and behavior. It helps you understand how you approach challenges, collaborate with others, and lead with purpose, supporting self-awareness and continuous personal development.
+										The ChangeMaker Index transforms every in-game choice into meaningful insights
+										on your mindset and behavior. It helps you understand how you approach
+										challenges, collaborate with others, and lead with purpose, supporting
+										self-awareness and continuous personal development.
 									</p>
 								</div>
 
@@ -364,14 +370,17 @@
 										<img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
 									</div>
 
-									<p class="header-title-side-text">Seamless Integration with Your Goals </p>
+									<p class="header-title-side-text">Seamless Integration with Your Goals</p>
 
 								</div>
 
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										RealLives aligns effortlessly with personal growth journeys, professional development paths, and lifelong learning goals. You can track your progress across 18 ChangeMaker competencies, turning qualities like compassion, integrity, and adaptability into measurable growth milestones.
+										RealLives aligns effortlessly with personal growth journeys, professional
+										development paths, and lifelong learning goals. You can track your progress
+										across 18 ChangeMaker competencies, turning qualities like compassion,
+										integrity, and adaptability into measurable growth milestones.
 									</p>
 
 								</div>
@@ -387,14 +396,17 @@
 										<img class="image-fit-content" src="image/users-three-duotone 1.svg" alt="">
 									</div>
 
-									<p class="header-title-side-text">Build a Life of Reflection and Purpose </p>
+									<p class="header-title-side-text">Build a Life of Reflection and Purpose</p>
 
-								</div>  
+								</div>
 
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										By revealing the impact of your decisions, RealLives encourages you to think deeply, act responsibly, and grow consciously. It nurtures a global community of ChangeMakers, empathetic, confident individuals ready to lead with purpose and create positive change in the world.
+										By revealing the impact of your decisions, RealLives encourages you to think
+										deeply, act responsibly, and grow consciously. It nurtures a global community of
+										ChangeMakers, empathetic, confident individuals ready to lead with purpose and
+										create positive change in the world.
 									</p>
 								</div>
 
@@ -409,18 +421,28 @@
 
 			</div>
 
-			<div class="tab-pane section-first-container" id="institutions" style="display: none;">ChangeMaker for Institutions
+			<div class="tab-pane section-first-container" id="institutions" style="display: none;">ChangeMaker for
+				Institutions
 
-				<p class="bottom-data-benifit-description">We’re building something powerful for educators and institutions — a space to measure, nurture, and celebrate every student’s growth beyond academics. Stay tuned as we unveil how RealLives empowers schools and universities to shape tomorrow’s changemakers.</p>
+				<p class="bottom-data-benifit-description">We’re building something powerful for educators and
+					institutions — a space to measure, nurture, and celebrate every student’s growth beyond academics.
+					Stay tuned as we unveil how RealLives empowers schools and universities to shape tomorrow’s
+					changemakers.</p>
 			</div>
-			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your Workforce of the Future
+			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your Workforce
+				of the Future
 
-				<p class="bottom-data-benifit-description">We’re creating a space for employers who value purpose-driven talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers who bring empathy, innovation, and impact to work.</p>
+				<p class="bottom-data-benifit-description">We’re creating a space for employers who value purpose-driven
+					talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers who
+					bring empathy, innovation, and impact to work.</p>
 			</div>
-			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the Changemakers in Your Life
+			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the Changemakers in
+				Your Life
 
-				<p class="bottom-data-benifit-description">We’re creating a space for parents to support their children’s growth beyond academics.
-Coming soon, resources and insights to help you understand your child, guide their decisions, and celebrate their journey as a changemaker.</p>
+				<p class="bottom-data-benifit-description">We’re creating a space for parents to support their
+					children’s growth beyond academics.
+					Coming soon, resources and insights to help you understand your child, guide their decisions, and
+					celebrate their journey as a changemaker.</p>
 			</div>
 
 
