--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
 					Stay tuned as we unveil how RealLives empowers schools and universities to shape tomorrow’s
 					changemakers.</p>
 			</div>
+
 			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your Workforce
 				of the Future
 
@@ -436,6 +437,7 @@
 					talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers who
 					bring empathy, innovation, and impact to work.</p>
 			</div>
+
 			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the Changemakers in
 				Your Life
 
@@ -2280,7 +2282,9 @@
 								<span class="span-gamer-flex">
 									<button type="submit" class="btn btn-primary btn-lg btn-padding-primary"
 										style="margin-top: 1rem">
-										Send
+										Send <span class="material-symbols-outlined send-color">
+											send
+										</span>
 									</button>
 
 									<p style="margin-top: 2rem" id="status"></p>
@@ -2399,8 +2403,7 @@
 					<p class="text-footer-label">Support</p>
 
 					<span class="footer-child-container">
-						<a class="footer-ankar-style" href="">Contact Us</a>
-
+						<a class="footer-ankar-style" href="#" data-target="contact">Contact Us</a>
 					</span>
 
 				</div>
