--- a/index.html
+++ b/index.html
@@ -90,16 +90,24 @@
 
 							<div class="button-changes-container">
 
-								<button class="become-change-btn">Become a ChangeMaker</button>
-								<button class="how-this-works-btn">How this works?</button>
+								<a href="https://reallivesworld.com/reallives-website-main/license.html">
+
+									<button class="become-change-btn">Become a ChangeMaker</button>
+								</a>
+
+
+								<a href="  .how-to-works-rcmi-container">
+									<button class="how-this-works-btn">How this works?</button>
+
+								</a>
 
 							</div>
 
 						</div>
 
 
-						<div class="inner-section image-height">
-							<img class="image-fit-content" src="image/first-section-image.png" alt="">
+						<div class="inner-section">
+							<img class="image-fit-content image-height" src="image/first-section-image.png" alt="">
 						</div>
 
 
@@ -1153,9 +1161,8 @@
 
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
-							<a href="#pricing" class="nav-link  no-text-decoration">
-
-
+							<a href="https://reallivesworld.com/reallives-website-main/license.html"
+								class="text-style-descoration">
 
 								<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus
 									<span class="material-symbols-outlined">
@@ -1775,7 +1782,7 @@
 
 						<div class="card-reallives-campus-box">
 
-							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
+							<p class="global-student-title">Empower Your Students with Global Perspectivesss</p>
 
 							<a href="#pricing" class=" nav-link no-text-decoration ">
 
@@ -2403,7 +2410,7 @@
 					<p class="text-footer-label">Support</p>
 
 					<span class="footer-child-container">
-						<a class="footer-ankar-style" href="#" data-target="contact">Contact Us</a>
+						<a class="footer-ankar-style" href="#">Contact Us</a>
 					</span>
 
 				</div>
