--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
 							<a href="https://reallivesworld.com/reallives-website-main/license.html"
 								class="text-style-descoration">
 
-								<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus
+								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
 										arrow_forward
 									</span></button>
@@ -1528,7 +1528,7 @@
 
 							<a href="#pricing" class=" nav-link no-text-decoration ">
 
-								<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus
+								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
 										arrow_forward
 									</span></button>
@@ -1770,7 +1770,7 @@
 
 							<!-- <img class="impact-img-containe " src="images/university-boy-image.svg" alt=""> -->
 
-							<video class=" image-cover-class " src="video/Student-video-workshop.mp4" loop="" controls
+							<video class=" image-cover-class " src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/Student-video-workshop.mp4" loop="" controls
 								playsinline="">
 							</video>
 
@@ -1786,7 +1786,7 @@
 
 							<a href="#pricing" class=" nav-link no-text-decoration ">
 
-								<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus
+								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
 										arrow_forward
 									</span>
@@ -1997,7 +1997,7 @@
 
 							<a href="#pricing" class=" nav-link no-text-decoration ">
 
-								<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus
+								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
 										arrow_forward
 									</span></button>
@@ -2237,7 +2237,7 @@
 
 						<a href="#pricing" class=" nav-link no-text-decoration ">
 
-							<button class="larne-more-btn background-color-white">Bring RealLives to Your Campus <span
+							<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey <span
 									class="material-symbols-outlined">
 									arrow_forward
 								</span>
