--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
 							<div class="button-changes-container">
 
-								<a href="https://reallivesworld.com/reallives-website-main/license.html">
+								<a href="https://reallivesworld.com/reallives-website-main/license.html"
+									target="_blank">
 
 									<button class="become-change-btn">Become a ChangeMaker</button>
 								</a>
@@ -813,6 +814,7 @@
 					</div>
 
 				</div>
+
 				<div class="changemaker-journey-container">
 
 					<div class="child-changemaker-container">
@@ -924,16 +926,19 @@
 					</div>
 
 				</div>
+
 				<div class="begin-your-changemaker-container">
 
 					<p class="make-decision-skill-text">Make decisions, grow skills, and see your impact come to life.
 					</p>
 
-					<a class="becomechanage-maker-style" href="#">
+					<a class="becomechanage-maker-style"
+						href="https://reallivesworld.com/reallives-website-main/license.html" target="_blank">
 						<div class="becomechanage-maker">Begin Your ChangeMaker Journey</div>
 					</a>
 
 				</div>
+
 			</div>
 
 			<div class="tab-pane hero-page background-color-transparent  padding-global" id="impact"
@@ -1161,7 +1166,7 @@
 
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
-							<a href="https://reallivesworld.com/reallives-website-main/license.html"
+							<a href="https://reallivesworld.com/reallives-website-main/license.html" target="_blank"
 								class="text-style-descoration">
 
 								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
