--- a/index.html
+++ b/index.html
@@ -1155,6 +1155,10 @@
 						</div>
 
 
+						<div class="card-reallives-campus-box">
+
+
+
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
 							<a href="https://reallivesworld.com/reallives-website-main/license.html"
