--- a/index.html
+++ b/index.html
@@ -1775,8 +1775,9 @@
 
 							<!-- <img class="impact-img-containe " src="images/university-boy-image.svg" alt=""> -->
 
-							<video class=" image-cover-class " src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/Student-video-workshop.mp4" loop="" controls
-								playsinline="">
+							<video class=" image-cover-class "
+								src="https://reallivesfrontend.s3.us-east-1.amazonaws.com/Student-video-workshop.mp4"
+								loop="" controls playsinline="">
 							</video>
 
 						</div>
@@ -2352,8 +2353,6 @@
 			</div>
 
 		</div>
-
-
 
 		<footer class="footer-container">
 
