--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/svg+xml" href="image/logo.svg" />
+	<link rel="icon" type="image/svg+xml" href="image/rcmi-logo.png" />
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/contact.css">
-	<title>RealLives Foundation</title>
+	<title>RealLives ChangeMaker Index</title>
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 </head>
