--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
 							<div class="button-changes-container">
 
-								<a href="https://reallivesworld.com/reallives-website-main/license.html">
+								<a href="https://reallivesworld.com/reallives-website-main/license.html" target="_blank">
 
-									<button class="become-change-btn">Become a ChangeMaker</button>
+									<button class="become-change-btn" t>Become a ChangeMaker</button>
 								</a>
 
 
