add responsive mobile

--- a/index.html
+++ b/index.html
@@ -2462,6 +2462,8 @@
 
 		}
 
+		// menu toogle btn 
+
 		const mobileMenuBtn = document.getElementById("mobileMenuBtn");
 		const menuIcon = document.getElementById("menuIcon");
 		const navLinks = document.querySelector(".right-side-bar");
@@ -2476,6 +2478,8 @@
 			}
 		});
 
+
+		// menu toogle btn 
 
 
 	</script>
