--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="icon" type="image/svg+xml" href="image/rcmi-logo.png" />
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/contact.css">
+	<meta name="theme-color" content="#ffaa33">
+
 	<title>RealLives ChangeMaker Index</title>
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
