--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/contact.css">
 	<meta name="theme-color" content="#ffaa33">
-
 	<title>RealLives ChangeMaker Index</title>
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
@@ -24,7 +23,9 @@
 			<div class="left-side-bar" id="logo">
 
 				<div class="logo-change">
+
 					<img class="image-fit-cover" src="image/logo.svg" alt="">
+
 				</div>
 
 				<span class="border-right-index">
@@ -32,7 +33,6 @@
 					<p class="changemaker-text">ChangeMaker Index</p>
 
 				</span>
-
 
 			</div>
 
@@ -44,6 +44,7 @@
 
 			</div> -->
 
+
 			<div class="icon-menu-mobile" id="mobileMenuBtn">
 				<span class="material-symbols-outlined" id="menuIcon">
 					menu
@@ -54,9 +55,8 @@
 			<div class="right-side-bar nav-links">
 
 
-
-
 				<div class="dropdown">
+
 					<button id="dropdownButton" class="dropbtn navigation-text-style " data-target="best-suited">
 						Best Suited For
 						<span class="arrow"><i class="ri-arrow-down-s-line"></i></span>
@@ -72,6 +72,7 @@
 								Parents</a>
 						</span>
 					</div>
+
 				</div>
 
 				<a href="#" class="nav-link navigation-text-style" data-target="about">About RCMI</a>
@@ -86,6 +87,7 @@
 		<div id="tab-content">
 
 			<div class="tab-pane" id="best-suited">
+
 				<div class="home-container  tab-panel active ">
 
 					<div class="section-first-container">
@@ -152,6 +154,7 @@
 									</div>
 
 									<div class="box-card-data">
+
 										<div class="icon-card">
 											<img class="image-fit-content" src="image/chart-line-up-duotone.svg" alt="">
 										</div>
@@ -174,6 +177,7 @@
 										</div>
 
 										<p class="title-of-card">AI Guidance</p>
+
 									</div>
 
 								</div>
@@ -2367,7 +2371,6 @@
 		</div>
 
 
-
 		<footer class="footer-container">
 
 			<div class="footer-section-1">
@@ -2420,8 +2423,10 @@
 					<p class="text-footer-label">Get to Know</p>
 
 					<span class="footer-child-container">
+
 						<a class="footer-ankar-style" href="javascript:void(0)" onclick="setActiveTab('about')">About
-							RCMI</a>
+							RCMI
+						</a>
 					</span>
 
 				</div>
@@ -2451,6 +2456,7 @@
 	<script src="js/script.js"></script>
 
 	<script>
+
 		function setActiveTab(target) {
 			document.querySelectorAll('.nav-link').forEach(link => link.classList.remove('active'));
 			const aboutTab = document.querySelector(`.nav-link[data-target="${target}"]`);
@@ -2480,9 +2486,7 @@
 			}
 		});
 
-
 		// menu toogle btn 
-
 
 	</script>
 
