--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 </head>
 
+
+
+
 <body>
 
 
@@ -453,31 +456,55 @@
 
 			</div>
 
-			<div class="tab-pane section-first-container" id="institutions" style="display: none;">ChangeMaker for
+			<!-- all tab -->
+
+
+			<!-- top-content-dropdown   -->
+
+
+			<div class="tab-pane section-first-container" id="institutions" style="display: none;">
+
+				ChangeMaker for
 				Institutions
 
 				<p class="bottom-data-benifit-description">We’re building something powerful for educators and
-					institutions — a space to measure, nurture, and celebrate every student’s growth beyond academics.
+					institutions — a space to measure, nurture, and celebrate every student’s growth beyond
+					academics.
 					Stay tuned as we unveil how RealLives empowers schools and universities to shape tomorrow’s
-					changemakers.</p>
+					changemakers.
+				</p>
+
 			</div>
 
-			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your Workforce
+			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your
+
+				Workforce
 				of the Future
 
-				<p class="bottom-data-benifit-description">We’re creating a space for employers who value purpose-driven
-					talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers who
+				<p class="bottom-data-benifit-description">We’re creating a space for employers who value
+					purpose-driven
+					talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers
+					who
 					bring empathy, innovation, and impact to work.</p>
+
 			</div>
 
-			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the Changemakers in
+			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the
+
+				Changemakers
+				in
 				Your Life
 
 				<p class="bottom-data-benifit-description">We’re creating a space for parents to support their
 					children’s growth beyond academics.
-					Coming soon, resources and insights to help you understand your child, guide their decisions, and
+					Coming soon, resources and insights to help you understand your child, guide their
+					decisions,
+					and
 					celebrate their journey as a changemaker.</p>
 			</div>
+
+
+			<!-- top-content-dropdown -->
 
 
 			<div class="tab-pane about-container " id="about" style="display: none;">
@@ -1040,7 +1067,6 @@
 							</span>
 
 
-
 							<div class="bottom-card-imapct-section">
 
 								<div class="impact-image-card">
@@ -1105,7 +1131,6 @@
 							</div>
 
 						</div>
-
 
 
 						<div class="card-box-impact">
@@ -1186,7 +1211,7 @@
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
 							<a href="https://reallivesworld.com/reallives-website-main/license.html"
-								class="text-style-descoration">
+								class="text-style-descoration" target="_blank">
 
 								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
@@ -1536,13 +1561,7 @@
 							</div>
 
 						</span>
-
-
-
-
 					</div>
-
-
 
 
 					<div class="wrapper-footer-tab-padding first-tab-margin">
@@ -1550,7 +1569,8 @@
 
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
-							<a href="#pricing" class=" nav-link no-text-decoration ">
+							<a href="https://reallivesworld.com/reallives-website-main/school-index.html#pricing"
+								class=" text-style-descoration  no-text-decoration " target="_blank">
 
 								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
@@ -1804,9 +1824,10 @@
 
 						<div class="card-reallives-campus-box">
 
-							<p class="global-student-title">Empower Your Students with Global Perspectivesss</p>
+							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
-							<a href="#pricing" class=" nav-link no-text-decoration ">
+							<a href="https://reallivesworld.com/reallives-website-main/school-index.html#pricing"
+								class=" no-text-decoration  text-style-descoration " target="_blank">
 
 								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
@@ -1881,13 +1902,9 @@
 								<img src="images/E-WEB-Goal-04.png" alt="">
 							</div>
 
-
-
 						</div>
 
 					</div>
-
-
 
 
 					<div class="first-tab-style ">
@@ -2007,9 +2024,6 @@
 
 						</span>
 
-
-
-
 					</div>
 
 					<div class="wrapper-footer-tab-padding first-tab-margin">
@@ -2017,7 +2031,8 @@
 
 							<p class="global-student-title">Empower Your Students with Global Perspectives</p>
 
-							<a href="#pricing" class=" nav-link no-text-decoration ">
+							<a href="https://reallivesworld.com/reallives-website-main/school-index.html#pricing"
+								class=" no-text-decoration text-style-descoration  " target="_blank">
 
 								<button class="larne-more-btn background-color-white">Begin Your ChangeMaking Journey
 									<span class="material-symbols-outlined">
@@ -2273,7 +2288,6 @@
 
 				</div>
 
-
 			</div>
 
 			<div class="tab-pane contact-page " id="contact" style="display: none;">
@@ -2367,6 +2381,7 @@
 				</div>
 
 			</div>
+
 
 		</div>
 
